Fix z-index layering

--- a/core/sidebarTweaks/sidebarTweaks.css
+++ b/core/sidebarTweaks/sidebarTweaks.css
@@ -21,6 +21,16 @@
  * along with 'Missing e'. If not, see <http://www.gnu.org/licenses/>.
  */
 
+#sidebarTweaks_overlay {
+width:100%;
+height:100%;
+position:fixed;
+top:0;
+left:0;
+z-index:1338;
+background-color:transparent;
+}
+
 #MissingE_sidebar_title a {
 color:rgba(0,0,0,0.73) !important;
 text-shadow:1px 1px 1px rgba(255,255,255,0.5) !important;
@@ -56,7 +66,7 @@ color:rgba(255,255,255,0.69) !important;
 
 #MissingE_sidebar_menu {
 position:absolute;
-z-index:150;
+z-index:1400;
 margin:0 !important;
 background:#1C3752;
 border-top-right-radius:0 !important;
